[package]
name = "charon"
description = "core charon language utilities"
version = "0.0.1"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/charon"
repository = "https://github.com/hvlck/charon"
license = "Apache-2.0"
publish = false

[workspace]
members = [
    "src/lex",
    "src/errors",
    "src/optimise",
    "src/parse",
    "src/rt",
    "src/vm"
]
exclude = [
    "chrn/",
    "wasm/"
]

[dependencies]
