[package]
name = "chrn"
description = "charon command-line tool"
version = "0.1.0"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/charon"
repository = "https://github.com/hvlck/charon"
license = "Apache-2.0"
publish = false

[dependencies]
structopt = "~0.3.21"
colored = "~2.0.0"
charon = { path = "../" }