[package]
name = "chrn"
description = "charon interpreter"
version = "0.1.0"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/charon"
repository = "https://github.com/hvlck/charon"
license = "Apache-2.0"
publish = false

[dependencies]
clap = "~2.33.3"
rustyline = "~8.2.0"
charon = { path = "../" }