[package]
name = "chrn-wasm"
description = "charon interpreter for use in WebAssembly"
version = "0.1.0"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/charon"
repository = "https://github.com/hvlck/charon"
license = "Apache-2.0"
publish = false

[dependencies]
